<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RestaurantManager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="button_OK">OK</string>
    <string name="button_cancel">Cancel</string>

    <!-- Titles for ManagerActivity -->
    <string name="home">Home</string>
    <string name="goods">Goods Manager</string>
    <string name="dish">Dish Manager</string>
    <string name="report">Report</string>
    <string name="setting">Settings</string>
    <string name="more_apps">More Apps</string>
    <string name="about_us">About Us</string>

    <!-- Strings in alert dialog -->
    <string name="text_incomplete">You should finish all the information</string>

    <!-- Strings in launch scene -->
    <string name="company_name">Tony Studio</string>

    <!-- Strings in manager activity -->
    <string name="input_builder_message">Enter number of tables you want: </string>

    <!-- Strings in add tables dialog-->
    <string name="question_add_tables">Enter number of tables that you want</string>
    <string name="input_minus_int">The number of tables can not be minus!</string>

    <!-- Strings in table details-->
    <string name="number_customer"> people</string>
    <string name="bill_sum">Bill sum: </string>
    <string name="dish_amount">1</string>
    <string name="dish_name1">Milk tea with cream</string>
    <string name="dish_price1">25000</string>
    <string name="button_bill">Bill</string>

    <!-- Strings in dialog manage customers -->
    <string name="toast_customers_less_than_1">Customers cannot be less than 1 person</string>

    <!-- Strings in show bill activity -->
    <string name="button_close">Close</string>
    <string name="dish_name_bill">Dish name</string>
    <string name="dish_amount_bill">Amount</string>
    <string name="dish_price_bill">Price</string>


    <!-- Strings in active table dialog -->
    <string name="message_active_table">Active table number </string>
    <string name="hint_add_number_of_customers">Add number of customers</string>

    <!-- Strings in add goods dialog -->
    <string name="goods_image">Image</string>
    <string name="goods_names">Name</string>
    <string name="goods_quantity">Quantity</string>
    <string name="goods_price">Price</string>
    <string name="goods_unit">Unit</string>
    <string name="goods_expired_date">EXD</string>
    <string name="button_brown_to_gallery">Gallery</string>
    <string name="button_to_take_a_photo">Camera</string>
    <string name="hint_edit_goods_name" tools:ignore="StringEscaping">Add goods' name</string>
    <string name="hint_edit_goods_quantity" tools:ignore="StringEscaping">Add goods' quantity</string>
    <string name="hint_edit_goods_price" tools:ignore="StringEscaping">Add goods' price</string>
    <string name="hint_edit_goods_unit" tools:ignore="StringEscaping">Add goods' unit</string>
    <!-- -->

    <!-- Strings in add dish dialog -->
    <string name="dish_name">Name</string>
    <string name="dish_image">Image</string>
    <string name="dish_unit">Unit</string>
    <string name="dish_price">Price</string>
    <string name="hint_edit_dish_name" tools:ignore="StringEscaping">Add dish' name</string>
    <string name="hint_edit_dish_price" tools:ignore="StringEscaping">Add dish' price</string>
    <string name="hint_edit_dish_unit" tools:ignore="StringEscaping">Add dish' unit</string>
    <!-- -->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_manager">ManagerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
