<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="20">

    <TextView
        android:id="@+id/dishNameShowBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:text="@string/dish_name_bill"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dishAmountShowBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/dish_amount_bill"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dishPriceShowBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/dish_price_bill"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>