<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_round_corner"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/txtMessageActiveTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_active_table"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtInputNumbersCustomers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_number_of_customers"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:weightSum="10">

        <Button
            android:id="@+id/btnConfirmActiveTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/button_round_corner"
            android:text="@string/button_OK" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/btnCancelActiveTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/button_round_corner"
            android:text="@string/button_cancel" />
    </LinearLayout>
</LinearLayout>